# featureflags-py

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  lets.yaml  pyproject.toml  tox.ini
.github/workflows/: release.yaml  test.yaml
examples/: README.md
examples/grpc/: aiohttp_app.py  flags.py  flask_app.py  sanic_app.py  wsgi_app.py
examples/http/: flags.py  httpx_client.py
featureflags/grpc/: client.py  conditions.py  flags.py  state.py  tracer.py
featureflags/grpc/managers/: asyncio.py  base.py  dummy.py  sync.py
featureflags/http/: client.py  conditions.py  flags.py  state.py
featureflags/http/managers/: base.py  httpx.py
featureflags/tests/: conftest.py
featureflags/tests/grpc/: test_conditions.py  test_flags.py  test_managers_asyncio.py  test_managers_dummy.py  test_utils.py
featureflags_client/grpc/: client.py  flags.py  state.py  stats_collector.py
featureflags_client/grpc/managers/: asyncio.py  base.py  dummy.py  sync.py
featureflags_client/http/: client.py  conditions.py  constants.py  flags.py  state.py  utils.py  values.py
featureflags_client/http/managers/: aiohttp.py  base.py  httpx.py  requests.py
featureflags_client/tests/: conftest.py
featureflags_client/tests/grpc/: test_conditions.py  test_flags.py  test_managers_asyncio.py  test_managers_dummy.py  test_utils.py
featureflags_client/tests/http/: test_conditions.py
scripts/: release.sh
